unpackaged/main/default/objects/Product_SKU_Promotions__c/Product_SKU_Promotions__c.object-meta.xml
<CustomObject>
    <description>Links the Product SKU and Promotion Objects together. Indicates if a promotion is available for a product sku</description>
    <label>Product SKU Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product SKU Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>