unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Active_Promo__c.field-meta.xml
<CustomField>
    <fullName>Active_Promo__c</fullName>
    <formula>Promotion__r.Active_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Promo</label>
    <type>Checkbox</type>
</CustomField>