unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Discount_Duration__c.field-meta.xml
<CustomField>
    <fullName>Discount_Duration__c</fullName>
    <formula>Promotion__r.Discount_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>