unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Discount_Fix_or_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Fix_or_Percent__c</fullName>
    <formula>Promotion__r.Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount ($ or %)</label>
    <type>Text</type>
</CustomField>