unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <formula>Promotion__r.Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>