unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Promo_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Start_Date__c</fullName>
    <formula>Promotion__r.Start_Date_Time__c</formula>
    <label>Promo Start Date</label>
    <type>DateTime</type>
</CustomField>