unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Promo_Status__c.field-meta.xml
<CustomField>
    <fullName>Promo_Status__c</fullName>
    <formula>TEXT(Promotion__r.Status__c)</formula>
    <label>Promo Status</label>
    <type>Text</type>
</CustomField>