unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Product SKU Promotions</relationshipLabel>
    <relationshipName>Product_SKU_Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>