unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>SKU_Name__c</fullName>
    <formula>SKU_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Name</label>
    <type>Text</type>
</CustomField>