unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Product</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>Product SKU Promotions</relationshipLabel>
    <relationshipName>Product_SKU_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>