unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/SKU_Product_Specific_Discount__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product_Specific_Discount__c</fullName>
    <description>Used as a placeholder for overrides in product picker or as a means to deviate from discount set at the Promotion level.</description>
    <inlineHelpText>Used as a placeholder for overrides in product picker or as a means to deviate from discount set at the Promotion level.</inlineHelpText>
    <label>SKU Product Specific Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>