unpackaged/main/default/objects/Product_SKU_Promotions__c/fields/SKU_Product_Specific_Duration__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product_Specific_Duration__c</fullName>
    <description>Used as a placeholder for user overrides in the product picker or for durations that are different from the duration set at the Promotion level.</description>
    <inlineHelpText>Used as a placeholder for user overrides in the product picker or for durations that are different from the duration set at the Promotion level.</inlineHelpText>
    <label>SKU Product Specific Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>