unpackaged/main/default/objects/Product_SKU_Promotions__c/listViews/All_Product_SKU_Promotions.listView-meta.xml
<ListView>
    <fullName>All_Product_SKU_Promotions</fullName>
    <columns>NAME</columns>
    <columns>SKU_Product__c</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Discount_Duration__c</columns>
    <columns>Promo_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Promo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Product SKU Promotions</label>
</ListView>